--- a/Ecommerce shop/Cable_Menu.html
+++ b/Ecommerce shop/Cable_Menu.html
@@ -13,8 +13,8 @@
 
 <div class="navbar">
     <a href="Eshop.html">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
+   <a href="#news">Login</a>
+  <a href="#contact">Register</a>
 
   <div class="shopping-cart">
 
