--- a/Ecommerce shop/Cases_Menu.html
+++ b/Ecommerce shop/Cases_Menu.html
@@ -13,8 +13,8 @@
 
 <div class="navbar">
    <a href="Eshop.html">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
+  <a href="#news">Login</a>
+  <a href="#contact">Register</a>
 
   <div class="shopping-cart">
 
@@ -49,7 +49,7 @@
   <img src="s9.png" alt="Avatar" width="300" height="300"  class="image" >
 </a>
 </div>
-<p style=" padding: 0px 0px 0px 10px; "><b style=" color: #f4731f;">Samsung Galaxy S9 </b>=<b > 1000$</b> </p>
+<p style=" padding: 0px 0px 0px 10px; "><b>Samsung Galaxy S9 </b>=<b> 1000$</b> </p>
 
    </div>
 
@@ -62,7 +62,7 @@
   <img src="s9.png" alt="Avatar" width="300" height="300"  class="image"  >
 </a>
 </div>
-<p style=" padding: 0px 0px 0px 10px;"><b style=" color: #f4731f;">Samsung Galaxy S9 </b>=<b > 1000$</b> </p>
+<p style=" padding: 0px 0px 0px 10px;"><b>Samsung Galaxy S9 </b>=<b > 1000$</b> </p>
    </div>
 
 
@@ -73,7 +73,7 @@
 <div class="container">
   <img src="s9.png" alt="Avatar" width="300" height="300"  class="image">
 </div>
-<p style=" padding: 0px 0px 0px 10px;"><b style=" color: #f4731f;">Samsung Galaxy S9 </b>=<b > 1000$</b> </p>
+<p style=" padding: 0px 0px 0px 10px;"><b>Samsung Galaxy S9 </b>=<b > 1000$</b> </p>
    </div>
 
 
@@ -84,7 +84,7 @@
 <div class="container">
   <img src="s9.png" alt="Avatar" width="300" height="300"  class="image">
 </div>
-<p style=" padding: 0px 0px 15px 10px;"><b style=" color: #f4731f;">Samsung Galaxy S9 </b>=<b > 1000$</b> </p>
+<p style=" padding: 0px 0px 15px 10px;"><b>Samsung Galaxy S9 </b>=<b > 1000$</b> </p>
    </div>
 
                     
@@ -94,7 +94,7 @@
 <div class="container">
   <img src="s9.png" alt="Avatar" width="300" height="300"  class="image">
 </div>
-<p style=" padding: 0px 0px 15px 10px;"><b style=" color: #f4731f;">Samsung Galaxy S9 </b>=<b > 1000$</b> </p>
+<p style=" padding: 0px 0px 15px 10px;"><b>Samsung Galaxy S9 </b>=<b > 1000$</b> </p>
    </div>
 
 
@@ -104,7 +104,7 @@
 <div class="container">
   <img src="s9.png" alt="Avatar" width="300" height="300"  class="image">
 </div>
-<p style=" padding: 0px 0px 15px 10px;"><b style=" color: #f4731f;">Samsung Galaxy S9 </b>=<b > 1000$</b> </p>
+<p style=" padding: 0px 0px 15px 10px;"><b>Samsung Galaxy S9 </b>=<b > 1000$</b> </p>
    </div>
 
 
