--- a/Ecommerce shop/PowerBank_Menu.html
+++ b/Ecommerce shop/PowerBank_Menu.html
@@ -13,8 +13,8 @@
 
 <div class="navbar">
    <a href="Eshop.html">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
+  <a href="#news">Login</a>
+  <a href="#contact">Register</a>
 
   <div class="shopping-cart">
 
@@ -42,7 +42,9 @@
            
         <div class="column">
 <div class="container">
+  <a href="Products_Menu.html#power_bank1">
   <img src="power-bank.png" alt="Avatar" width="300" height="300"  class="image">
+</a>
 </div>
   <p style=" padding: 0px 0px 0px 110px;"> <b>Power Banks</b> = 1000$</p>
 </div>
